# ChatProject

./: .gitignore  CMakeLists.txt  README.md
src/: client_main.cpp  main.cpp  server_main.cpp
src/controller/: client_controller.cpp  client_controller.h  server_controller.cpp  server_controller.h
src/model/: client.cpp  client.h  server.cpp  server.h
src/view/: client_view.cpp  client_view.h  server_view.cpp  server_view.h
